[gd_scene load_steps=8 format=3 uid="uid://rxqn4xoiignj"]

[ext_resource type="Script" path="res://scenes/leader_boards_scene.gd" id="1_1mg25"]
[ext_resource type="PackedScene" uid="uid://fqsxkbs42p2p" path="res://scenes/tables_container.tscn" id="2_3d1od"]
[ext_resource type="Texture2D" uid="uid://b20gq6upvbphf" path="res://assets/Big.png" id="2_u21ny"]
[ext_resource type="Texture2D" uid="uid://bag43a1cot83d" path="res://assets/HOVERED.png" id="4_je6cg"]
[ext_resource type="Texture2D" uid="uid://bcfiuiordq07l" path="res://assets/DEFAULT.png" id="4_rwqg1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mkyfg"]
texture = ExtResource("4_rwqg1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_034ow"]
texture = ExtResource("4_je6cg")

[node name="LeaderBoards_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mg25")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -128.0
offset_top = -288.0
offset_right = 1288.0
offset_bottom = 1072.0
texture = ExtResource("2_u21ny")

[node name="TablesContainer" parent="." instance=ExtResource("2_3d1od")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 384.0
offset_top = 128.0
offset_right = 1024.0
offset_bottom = 576.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 320.0
offset_bottom = 512.0

[node name="VGamesContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="SelectGameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 28
text = "Catálogo de juegos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderBoardsTable" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 128.0
offset_right = 960.0
offset_bottom = 256.0

[node name="BackToMainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 24.0
offset_right = 1092.0
offset_bottom = 64.0
theme_override_styles/normal = SubResource("StyleBoxTexture_mkyfg")
theme_override_styles/hover = SubResource("StyleBoxTexture_034ow")
theme_override_styles/pressed = SubResource("StyleBoxTexture_034ow")
theme_override_styles/focus = SubResource("StyleBoxTexture_034ow")
text = "Volver al menú principal"

[connection signal="button_down" from="BackToMainMenuButton" to="." method="_on_back_to_main_menu"]
